--- a/typescript/package.json
+++ b/typescript/package.json
@@ -1,10 +1,10 @@
 {
   "name": "b2brilliant-sdk",
-  "version": "0.1.0",
-  "description": "JavaScript SDK for the B2B Campaign Agent API",
-  "main": "src/index.js",
+  "version": "0.1.2",
+  "description": "The Official Typescript SDK for the B2Brilliant Campaign Agent API",
+  "main": "dist/index.js",
+  "types": "./types/",
   "scripts": {
-    "test": "jest"
   },
   "keywords": [
     "b2b",
@@ -17,12 +17,14 @@
   "author": "B2Brilliant",
   "license": "BSL-1.1",
   "dependencies": {
-    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
-    "jest": "^29.5.0"
   },
   "engines": {
     "node": ">=14.0.0"
+  },
+  "bugs": {
+	"email": "monkeydev4hire@proton.me",
+	"url": "https://github.com/h8ngryDev4Hire/b2brilliant-sdk/issues"
   }
 } 
